--- a/templates/site_web_xtra_copy/index.html.twig
+++ b/templates/site_web_xtra_copy/index.html.twig
@@ -3,5 +3,7 @@
 {% block title %}Bienvenue Chez Xtra Copy Tournai : Xtra-copy.be{% endblock %}
 
 {% block body %}
+{% include "site_web_xtra_copy/partials/_header.html.twig" %}
+{% include "site_web_xtra_copy/pages/_home.html.twig" %}
 
 {% endblock %}
