--- a/templates/site_web_xtra_copy/partials/_header.html.twig
+++ b/templates/site_web_xtra_copy/partials/_header.html.twig
@@ -1,29 +1,44 @@
-<div class="header">
+<div class="header" id="topIndex">
     <div class="headerSup">
         <ul>
             <li>
                 <i class="fa-solid fa-location-dot"></i>
                 <div class="information">
-                    <span>Adresse</span>
-                    <p>Rue de l'Yser 11</p>
-                    <p>7500 TOURNAI (Belgique)</p>
+                    <p><span>Adresse</span></br>
+                        Rue de l'Yser 11 - 7500 TOURNAI (Belgique)</p>
                 </div>
             </li>
             <li>
                 <i class="fa-solid fa-phone"></i>
                 <div class="information">
-                    <span>Téléphone</span>
-                    <p>+32(0)470/92.80.09</p>
+                    <p><span>Téléphone</span></br>
+                        +32 (0) 470/92.80.09</p>
                 </div>
             </li>
             <li>
                 <i class="fa-solid fa-envelope"></i>
                 <div class="information">
-                    <span>E-mail</span>
-                    <p>xtracopytournai@gmail.com</p>
+                    <p><span>E-mail</span></br>
+                        xtracopytournai@gmail.com</p>
                 </div>
             </li>
         </ul>
     </div>
-    <div class="headerInf"></div>
+    <div class="headerInf">
+        <div class="logo">
+            <a href="#topindex">
+                <span>XTRA COPY</span>
+                <p>- TOURNAI -</p>
+            </a>
+        </div>
+        <div class="MenuNav">
+            <ul>
+                <li><a href="#">Qui sommes-nous</a></li>
+                <li><a href="#">Nos différents services</a></li>
+                <li><a href="#">Notre localisation</a></li>
+                <li><a href="#">Nos horaires</a></li>
+            </ul>
+        </div>
+
+    </div>
 </div>
