--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,8 @@
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
             <script src="https://kit.fontawesome.com/e6a7279d9f.js" crossorigin="anonymous"></script>
+            <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+            
         {% endblock %}
     </head>
     <body>
