--- a/templates/site_web_xtra_copy/index.html.twig
+++ b/templates/site_web_xtra_copy/index.html.twig
@@ -5,5 +5,8 @@
 {% block body %}
 {% include "site_web_xtra_copy/partials/_header.html.twig" %}
 {% include "site_web_xtra_copy/pages/_home.html.twig" %}
+{% include "site_web_xtra_copy/pages/_about.html.twig" %}
+{% include "site_web_xtra_copy/pages/_service.html.twig" %}
+{% include "site_web_xtra_copy/pages/_map.html.twig" %}
 
 {% endblock %}
