--- a/templates/site_web_xtra_copy/partials/_header.html.twig
+++ b/templates/site_web_xtra_copy/partials/_header.html.twig
@@ -1,5 +1,4 @@
-<div class="header" id="topIndex">
-    <div class="headerSup">
+    <div class="headerSup" id="topIndex">
         <ul>
             <li>
                 <i class="fa-solid fa-location-dot"></i>
@@ -26,19 +25,18 @@
     </div>
     <div class="headerInf">
         <div class="logo">
-            <a href="#topindex">
+            <a href="#">
                 <span>XTRA COPY</span>
                 <p>- TOURNAI -</p>
             </a>
         </div>
         <div class="MenuNav">
             <ul>
-                <li><a href="#">Qui sommes-nous</a></li>
-                <li><a href="#">Nos différents services</a></li>
-                <li><a href="#">Notre localisation</a></li>
+                <li><a href="#aboutSection">Qui sommes-nous</a></li>
+                <li><a href="#serviceSection">Nos différents services</a></li>
+                <li><a href="#mapSection">Nous trouver</a></li>
                 <li><a href="#">Nos horaires</a></li>
             </ul>
         </div>
 
     </div>
-</div>
