--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,39 +1,145 @@
 //reset scss
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
     margin: 0;
     padding: 0;
     border: 0;
     font-size: 100%;
     font: inherit;
-    vertical-align: baseline; }
-  
-  /* HTML5 display-role reset for older browsers */
-  
-  article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-    display: block; }
-  
-  body {
-    line-height: 1; }
-  
-  ol, ul {
-    list-style: none; }
-  
-  blockquote, q {
-    quotes: none; }
-  
-  blockquote {
-    &:before, &:after {
-      content: '';
-      content: none; } }
-  
-  q {
-    &:before, &:after {
-      content: '';
-      content: none; } }
-  
-  table {
+    vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
+}
+
+body {
+    line-height: 1;
+}
+
+ol,
+ul {
+    list-style: none;
+}
+
+blockquote,
+q {
+    quotes: none;
+}
+
+blockquote {
+
+    &:before,
+    &:after {
+        content: '';
+        content: none;
+    }
+}
+
+q {
+
+    &:before,
+    &:after {
+        content: '';
+        content: none;
+    }
+}
+
+table {
     border-collapse: collapse;
-    border-spacing: 0; }
+    border-spacing: 0;
+}
 
 //css police
 @font-face {
@@ -45,6 +151,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     font-family: 'bar';
     src: url(../styles/polices/Barlow-Regular.ttf);
 }
+
 body,
 html {
     font-family: 'bar';
@@ -53,79 +160,356 @@ html {
 
 
 // css header
-.header{
-    .headerSup{
-        color: white;
-        height: 60px;
-        background-color: #1e6243;
-        ul{
-            padding: 0;
-            margin: 0;
+
+.headerSup {
+    color: white;
+    height: 60px;
+    background-color: #1e6243;
+    width: 100%;
+
+    ul {
+        padding: 0;
+        margin: 0;
+        display: flex;
+        list-style: none;
+        justify-content: space-evenly;
+
+        li {
             display: flex;
-            list-style: none;
-            justify-content: space-evenly;
-            li{
-                display: flex;
-                i{
-                    font-size: 25px;
-                    line-height: 56px;
-                    opacity: 0.5;
-                    margin-right: 15px;
-                }
-                p{
-                    line-height: 20px;
-                    padding-top: 6px;
-                    font-size: 14px;
-                    span{
-                        font-family: 'mark';
-                        font-size: 18px;
-                        opacity: 0.9;        
-                    }
+
+            i {
+                font-size: 25px;
+                line-height: 56px;
+                opacity: 0.5;
+                margin-right: 15px;
+            }
+
+            p {
+                line-height: 20px;
+                padding-top: 6px;
+                font-size: 14px;
+
+                span {
+                    font-family: 'mark';
+                    font-size: 18px;
+                    opacity: 0.9;
                 }
             }
         }
     }
-    .headerInf{
-        position: sticky;
-        display: flex;
-        height: 68px;
-        top:0;
-        z-index: 1;
-        box-shadow: 0px 4px 24px rgba(0,0,0,.25);
-        .logo{
-            padding-top: 10px;
-            width: 20%;
-            text-align: center;
-            a{
-                text-decoration: none;
-                font-size: 20px;
-                color: #1e6243;
-                span{
-                    font-family: "mark";
-                    font-size: 26px;
-                    color: #ff8a00;
-                }
+}
+
+.headerInf {
+
+    display: flex;
+    height: 68px;
+    width: 100%;
+    z-index: 10;
+    background-color: white;
+    box-shadow: 0px 4px 24px rgba(0, 0, 0, .25);
+    position: sticky;
+    top: 0;
+
+    .logo {
+        padding-top: 10px;
+        width: 20%;
+        text-align: center;
+
+        a {
+            text-decoration: none;
+            font-size: 20px;
+            color: #1e6243;
+
+            span {
+                font-family: "mark";
+                font-size: 26px;
+                color: #ff8a00;
             }
         }
-        .MenuNav{
-            width: 80%;
-            ul{
-                display: flex;
-                justify-content: space-evenly;
-                li{
-                    line-height: 64px;
-                   a{
+    }
+
+    .MenuNav {
+        width: 80%;
+
+        ul {
+            display: flex;
+            justify-content: space-evenly;
+
+            li {
+                line-height: 64px;
+
+                a {
                     text-decoration: none;
                     color: black;
                     font-size: 20px;
-                    &:hover{
+
+                    &:hover {
                         color: #ff8a00;
                     }
-                } 
                 }
-                
+            }
+
+
+        }
+    }
+}
+
+
+//css homepage
+.homePage {
+    width: 100%;
+    min-height: min(100vh - 128px, 100vh);
+
+
+    .slide {
+        position: absolute;
+        bottom: 0;
+        left: 30%;
+        img {
+            width: 100%;
+            height: auto;
+        }
+    }
+
+    .carre {
+        position: absolute;
+        width: 50px;
+        height: 50px;
+        background: linear-gradient(221.27deg, #1E6243 5.51%, #B7D14E 75.99%);
+        border-radius: 12px;
+        z-index: -99;
+        top: 50%;
+        right: 50%;
+
+    }
+
+    .triangle {
+        position: absolute;
+        z-index: -99;
+        top: 50%;
+        right: 50%;
+    }
+
+    .homePresentation {
+        text-align: left;
+        width: 520px;
+        padding-top: 110px;
+        text-align: center;
+        margin-left: 5%;
+
+
+        h1 {
+            font-size: 23px;
+            font-family: 'mark';
+            color: #1e6243;
+            font-weight: 100;
+
+            span {
+                font-size: 36px;
+                color: #ff8a00;
+            }
+        }
+
+        h2 {
+            font-size: 20px;
+            margin-top: 20px;
+            text-transform: uppercase;
+            font-weight: bold;
+            border-bottom: 1px solid #ff8a00;
+            padding-bottom: 20px;
+            margin-bottom: 35px;
+        }
+
+        p {
+            margin-top: 15px;
+            font-size: 19px;
+            font-weight: bold;
+
+            span {
+                color: #1e6243;
+            }
+        }
+    }
+}
+
+
+//css about
+.about {
+    width: 100%;
+    min-height: 100vh;
+    background-color: #1e6243;
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+
+    .blanc {
+        position: absolute;
+        background-color: white;
+        width: 100%;
+        height: 60px;
+        top: 0;
+        z-index: 0;
+    }
+
+    .cadre {
+        width: 120%;
+        background-color: #e6f1b7;
+        min-height: 100vh;
+        -webkit-transform: skew(-5deg);
+        -moz-transform: skew(-5deg);
+        transform: skew(-5deg);
+        margin-left: 2%;
+        z-index: 3;
+
+        .contenuAbout {
+            -webkit-transform: skew(5deg);
+            -moz-transform: skew(5deg);
+            transform: skew(5deg);
+            display: flex;
+            flex-direction: column;
+            margin-left: 3%;
+
+
+            .titre {
+                display: flex;
+                gap: 30px;
+                padding-top: 120px;
+                width: 50%;
+
+                img {
+                    width: 41px;
+                    height: 41px;
+                }
+
+                h2 {
+
+                    font-size: 35px;
+                    font-family: 'mark';
+                    color: #1e6243;
+                    font-weight: 100;
+                }
+            }
+
+            .description {
+                width: 35%;
+
+                .texte {
+                    p {
+                        padding-top: 25px;
+                        font-size: 22px;
+                        color: #1e6243;
+                        line-height: 26px;
+
+                        span {
+                            color: #ff8a00;
+                            font-weight: bold;
+                        }
+
+                        strong {
+                            font-weight: 600;
+                        }
+                    }
+                }
+            }
+
+            .imgMag {
+                width: 25%;
+                position: absolute;
+                top: 250px;
+                left: 45%;
+
+
+                img {
+                    border-radius: 15px;
+                    width: 100%;
+                    height: auto;
+                }
+            }
+
+        }
+
+    }
+}
+
+.servicePage {
+    width: 100%;
+    min-height: 100vh;
+    background-color: #ffffff;
+    position: relative;
+    .none{
+        display: none;
+    }
+
+    .titre {
+        display: flex;
+        gap: 30px;
+        padding-top: 120px;
+        width: 50%;
+        margin-left: 5%;
+        padding-bottom: 20px;
+
+        img {
+            width: 41px;
+            height: 41px;
+        }
+
+        h2 {
+
+            font-size: 35px;
+            font-family: 'mark';
+            color: #1e6243;
+            font-weight: 100;
+        }
+    }
+    .slide
+    {
+        padding-top: 20px;
+        width: 90%;
+        margin: auto;
+        h3{
+            color: #ff8a00;
+            font-size: 24px;
+            font-family: 'mark';
+            padding-bottom: 40px;
+            text-align: center;
+        }
+        .flexSlide
+        {
+            display: flex;
+            gap:10%;
+            .texte{
+                p{
+                    padding-top: 20px;
+                    font-size: 22px;
+                    color: #1E6243;
+
+                    span{
+                        color: #ff8a00;
+                        font-weight: bold;
+                    }
+                    strong{
+                        font-weight: 600;
+                    }
+                }
+            }
+            img{
+                width: 35%;
+                border-radius: 15px;
 
             }
         }
     }
+
+}
+
+
+
+//map
+
+.map{
+    width: 100%;
+    min-height: 100vh;
+    background-color: #B7D14E;
+    position: relative;
+
 }
