--- a/templates/site_web_xtra_copy/pages/_home.html.twig
+++ b/templates/site_web_xtra_copy/pages/_home.html.twig
@@ -1,10 +1,28 @@
-<div class="homePage">
-    <div class="homePresentation">TOURNAI</h1>
+<div class="homePage parallax">
+    <div class="slide ">
+        <img src="{{ asset('images/man.png') }}" class="effect" data-move="-0.5" data-x="100" data-y="0" alt="">
+    </div>
+     <div class="slide">
+        <img src="{{ asset('images/ampoule.png') }}" class="effect" data-move="-1.2" data-x="0" data-y="0" alt="">
+    </div>
+     <div class="slide">
+        <img src="{{ asset('images/chapeau.png') }}" alt="">
+    </div>
+     <div class="slide">
+        <img src="{{ asset('images/map.png') }}" alt="">
+    </div>
+    <div class="triangle layer layer0">
+    <img src="{{ asset('images/triangle-puce.png') }}" alt="">
+    </div>
+    <div class="carre layer layer1"></div>
+    <div class="homePresentation">
+        <h1>CHEZ <span>XTRA COPY</span> TOURNAI</h1>
         <h2>" Un service de qualités à moindre Coûts. "</h2>
-        <p>Xtracopy propose un service d'impression de qualité à moindre coût et un point relais pour vos colis.
+        <p><span>Xtracopy</span> propose un service d'<span>impression de qualité à moindre coût</span> et un
+            <span>point relais</span> pour vos colis.
         </p>
-        <p>Obtenez des impressions nettes et vibrantes sans casser votre tirelire.
+        <p>Obtenez des impressions nettes et vibrantes <span>sans casser votre tirelire</span>.
         </p>
-        <p>Visitez-nous dès maintenant pour profiter de notre service rapide, abordable et fiable.</p>
+        <p>Visitez-nous dès maintenant pour profiter de notre <span>service rapide, abordable et fiable.</span></p>
     </div>
 </div>
