--- a/templates/site_web_xtra_copy/index.html.twig
+++ b/templates/site_web_xtra_copy/index.html.twig
@@ -8,5 +8,6 @@
 {% include "site_web_xtra_copy/pages/_about.html.twig" %}
 {% include "site_web_xtra_copy/pages/_service.html.twig" %}
 {% include "site_web_xtra_copy/pages/_map.html.twig" %}
+{% include "site_web_xtra_copy/partials/_footer.html.twig" %}
 
 {% endblock %}
