--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -436,8 +436,52 @@ html {
     min-height: 100vh;
     background-color: #ffffff;
     position: relative;
+
+    .tarif{
+        width: 100%;
+        height: 200px;
+        position: relative;
+      .buttonTarif{
+        height: 40px;
+        width: 250px;
+        position: absolute;
+        top: 70px;
+        right: 5%;
+        border-radius: 50px;
+        background: linear-gradient(90deg, #B7D14E 0%, #1E6243 100%);
+        &:hover{
+            a{    
+                color: black;
+              i{
+                color: black;
+                
+            }  
+            }
+        }
+        a{
+            text-decoration: none;
+            color: white;
+            font-size: 22px;
+            line-height: 36px;
+            padding-left: 80px;
+          i{
+            font-size: 40px;
+            position: absolute;
+            left:  15px;
+            color: white;
+        }  
+        }
+        
+    }  
+    }
+    
+
     .none{
         display: none;
+    }
+    .service{
+        opacity: 0;
+        transition: opacity 0.5s ease-in-out;
     }
 
     .titre {
@@ -509,7 +553,108 @@ html {
 .map{
     width: 100%;
     min-height: 100vh;
-    background-color: #B7D14E;
     position: relative;
+    overflow: hidden;
+    iframe{
+        margin-top: 178px;
+        border-top: 2px solid #ff8a00;
+        border-bottom: 2px solid #ff8a00;
+    }
+    .titre{
+        position: absolute;
+        background-color: #1E6243;
+        width: 650px;
+        left: -100px;
+        display: flex;
+        height: 60px;
+        line-height: 60px;
+        margin-top: 120px;
+        transform: skew(-25deg);
+        padding-left: 5%;
+        gap: 30px;
+        img{
+            width: 41px;
+            height: 41px;
+            margin-top: 10px;
+            transform: skew(25deg);
+            padding-left: 100px;
+        }
+        h2{
+            transform: skew(25deg);
+            color: white;
+            font-size:  35px;
+            font-family: 'mark';
+        }
+    }
+    .info{
+        ul{
+            display: flex;
+            justify-content: space-evenly;
+            margin-bottom: 50px;
+            flex-wrap: wrap;
+            li{
+                .figure{
+                    height:  120px;
+                    position: relative;
+                    width: 81px;
+                    margin: auto;
+                    .carre{
+                        width:  81px;
+                        height: 60px;
+                        background-color: #ff8a00;
+                        margin: auto;
+                        position: absolute;
+                        margin-top: -2px;
+                    }
+                    .rond{
+                        width: 81px;
+                        height: 81px;
+                        background-color: #ff8a00;
+                        margin: auto;
+                        border-radius: 40px;
+                        position: absolute;
+                        top: 15px;
+                        text-align: center;
+                        i{
+                            color: #ffffff;
+                            opacity: 0.5;
+                            font-size: 42px;
+                            padding-top: 21px;            
+                        }
+                    }
+                }
+                .texte{
+                    text-align: center;
+                    h3{
+                        font-size: 20px;
+                        color: #ff8a00;
+                        font-weight: bold;
+                        margin-bottom: 10px;
+                    }
+                    p{
+                        font-size: 20px;
+                        line-height: 25px;
+                        strong{
+                            font-weight: bold;
+                        }
+                    }
+                }
+            }
+        }
+    }
 
+}
+
+
+//footer
+
+footer{
+    background-color:#1E6243;
+    width: 100%;
+    height: 56px;
+    text-align: center;
+    line-height: 56px;
+    p{
+        color: #ffffff;
+    }
 }
