--- a/templates/site_web_xtra_copy/pages/_about.html.twig
+++ b/templates/site_web_xtra_copy/pages/_about.html.twig
@@ -9,9 +9,9 @@
             <div class="description">
                 <div class="texte">
                     <p><span>Vous cherchez un centre d'impression de confiance à Tournai ?</span></p>
-                    <p>Ne cherchez pas plus loin que <span>Xtra copy
+                    <p>Ne cherchez pas plus loin que <span>Xtra Copy
                             Tournai !</span></br>Situé au cœur de la ville, à deux pas de la grand place, notre
-                        <strong>centre d'impression</strong> et
+                        <strong>centre d'impression</strong> est
                         également <strong>un point relais pour les livraisons de colis</strong>.</p>
                     <p>Que vous soyez un particulier ou une entreprise, nous proposons des services d'impression
                         flexibles
@@ -22,7 +22,7 @@
                     </p>
                     <p>Et si vous avez besoin de relier vos documents, nous proposons également une variété de reliures
                         à
-                        des prix très attractifs.</br> Chez <span>Xtra copy Tournai</span>, nous sommes fiers d'offrir
+                        des prix très attractifs.</br> Chez <span>Xtra Copy Tournai</span>, nous sommes fiers d'offrir
                         des services de qualité
                         et d'accueillir nos clients avec le sourire. </br>Notre objectif est de toujours vous laisser
                         satisfait
