--- a/templates/site_web_xtra_copy/pages/_home.html.twig
+++ b/templates/site_web_xtra_copy/pages/_home.html.twig
@@ -17,8 +17,8 @@
     <div class="carre layer layer1"></div>
     <div class="homePresentation">
         <h1>CHEZ <span>XTRA COPY</span> TOURNAI</h1>
-        <h2>" Un service de qualités à moindre Coûts. "</h2>
-        <p><span>Xtracopy</span> propose un service d'<span>impression de qualité à moindre coût</span> et un
+        <h2>" Un service de qualité à moindre Coûts. "</h2>
+        <p><span>Xtra Copy</span> propose un service d'<span>impression de qualité à moindre coût</span> et un
             <span>point relais</span> pour vos colis.
         </p>
         <p>Obtenez des impressions nettes et vibrantes <span>sans casser votre tirelire</span>.
