--- a/templates/site_web_xtra_copy/pages/_service.html.twig
+++ b/templates/site_web_xtra_copy/pages/_service.html.twig
@@ -5,27 +5,25 @@
     </div>
     <div class="slideServices">
         <div class="service slide">
-            <h3>Copies et Photocopies</h3>
+            <h3>Impressions et Photocopies</h3>
             <div class="flexSlide">
                 <div class="texte">
                     <p><span>Xtra Copy Tournai</span> est un magasin spécialisé dans la <strong>reproduction de
-                            documents.</strong> Nous offrons une
+                            documents.</strong></p><p> Nous offrons une
                         gamme
                         complète de services de copie, allant des photocopies standard aux impressions en couleur haute
                         résolution. Nous sommes également en mesure de réaliser des copies à partir de fichiers
                         <strong>PDF</strong>,
-                        pour que
-                        vous puissiez imprimer vos documents directement à partir de nos ordinateurs</p>
+                        pour imprimer directement vos documents sur place.</p>
                     <p>Chez <span>Xtra Copy Tournai</span>, nous sommes conscients de l'importance de la qualité et de
                         la précision
                         dans la
                         reproduction de vos documents. C'est pourquoi nous disposons d'un équipement de pointe pour
                         garantir une
-                        <strong>qualité d'impression irréprochable</strong> à chaque fois. Nous sommes également en
+                        <strong>qualité d'impression irréprochable</strong>. Nous sommes également en
                         mesure de réaliser
                         des copies
-                        en <strong>grand format</strong>, pour les <strong>plans</strong> et les
-                        <strong>affiches.</strong></p>
+                        en <strong>grand format</strong> <strong>(plans, affiches, photos)</strong>...</p>
                     <p>En plus de nos services de copie traditionnels, nous offrons également des <strong>systèmes
                             d'abonnement</strong>
                         qui
@@ -49,9 +47,7 @@
                 <div class="texte">
                     <p><span>Xtra Copy Tournai</span> offre des services de reliure professionnelle pour tous vos
                         documents. Nous proposons
-                        différents types de reliure, tels que la reliure à spirale, la reliure thermique et la reliure
-                        avec
-                        couverture rigide.</p>
+                        différents types de reliure, tels que la reliure à anneaux plastique ou métallique ainsi que des reliure à dos carré collé.</p>
                     <p>Chez <span>Xtra Copy Tournai</span>, nous comprenons l'importance de la qualité et de la
                         durabilité dans la reliure de
                         vos documents. C'est pourquoi nous utilisons des matériaux de haute qualité pour assurer une
@@ -71,32 +67,25 @@
             </div>
         </div>
         <div class="service slide">
-            <h3>Etiquettes et plastification</h3>
+            <h3>Plastification</h3>
             <div class="flexSlide">
                 <div class="texte">
-                    <p>Xtra Copy Tournai propose des services professionnels d'étiquetage et de plastification pour
+                    <p><span>Xtra Copy Tournai</span> propose des services professionnels d'étiquetage et de plastification pour
                         répondre à
-                        tous vos besoins en matière de protection et d'identification de documents.</p>
-                    <p>Nous offrons des services d'étiquetage personnalisés pour vos produits, vos dossiers et vos
-                        archives.
-                        Nous pouvons créer des étiquettes avec des codes à barres, des logos et des informations
-                        personnalisées
-                        pour vous aider à organiser et à identifier facilement vos documents.</p>
-                    <p>Nous offrons également des services de plastification pour protéger vos documents importants
+                        tous vos besoins en matière de protection de documents.</p>
+                    <p>Nous offrons un service de plastification pour protéger vos documents importants
                         contre
-                        l'humidité, les taches et les déchirures. Nous pouvons plastifier des documents de toutes
-                        tailles,
-                        depuis les cartes d'identité jusqu'aux grands posters.</p>
+                        l'humidité, les taches et les déchirures. Nous pouvons plastifier des documents jusqu'au format A3.</p>
                     <p>Chez Xtra Copy Tournai, nous utilisons des matériaux de haute qualité pour garantir une
                         protection
                         maximale de vos documents. Nous sommes là pour vous aider à conserver vos documents importants
                         en
-                        parfait état, tout en facilitant leur identification.</p>
-                    <p>En résumé, si vous cherchez un service professionnel d'étiquetage et de plastification à Tournai,
+                        parfait état.</p>
+                    <p>En résumé, si vous cherchez un service professionnel de plastification à Tournai,
                         ne
                         cherchez pas plus loin que Xtra Copy Tournai. Nous sommes là pour répondre à tous vos besoins en
                         matière
-                        de protection et d'identification de documents, en utilisant des matériaux de haute qualité pour
+                        de protection de documents, en utilisant des matériaux de haute qualité pour
                         garantir une protection maximale de vos documents importants.</p>
                 </div>
                 <img src="{{ asset('images/servicePlastification.jpg') }}" alt="">
@@ -115,14 +104,9 @@
                         pour vous
                         aider à expédier ou à récupérer votre colis en toute simplicité. Nous offrons une grande
                         flexibilité en
-                        termes d'horaires d'ouverture et de localisation, pour que vous puissiez récupérer votre colis à
+                        termes d'horaires d'ouverture, pour que vous puissiez récupérer votre colis à
                         un
-                        moment et à un endroit qui vous conviennent.</p>
-                    <p>Nous offrons également des services de plastification pour protéger vos documents importants
-                        contre
-                        l'humidité, les taches et les déchirures. Nous pouvons plastifier des documents de toutes
-                        tailles,
-                        depuis les cartes d'identité jusqu'aux grands posters.</p>
+                        moment qui vous conviennent.</p>
                     <p>Chez Xtra Copy Tournai, nous sommes fiers de travailler avec des entreprises de livraison de
                         renommée
                         internationale pour vous offrir une livraison rapide et fiable. Nous sommes là pour vous aider à
