--- a/templates/site_web_xtra_copy/pages/_home.html.twig
+++ b/templates/site_web_xtra_copy/pages/_home.html.twig
@@ -1,5 +1,5 @@
-<div class="homePage parallax">
-    <div class="slide ">
+<div class="homePage">
+    <div class="slide man">
         <img src="{{ asset('images/man.png') }}" class="effect" data-move="-0.5" data-x="100" data-y="0" alt="">
     </div>
      <div class="slide">
