--- a/templates/site_web_xtra_copy/pages/_service.html.twig
+++ b/templates/site_web_xtra_copy/pages/_service.html.twig
@@ -14,7 +14,7 @@
                         complète de services de copie, allant des photocopies standard aux impressions en couleur haute
                         résolution. Nous sommes également en mesure de réaliser des copies à partir de fichiers
                         <strong>PDF</strong>,
-                        pour imprimer directement vos documents sur place.</p>
+                        pour imprimer directement <strong>vos documents sur place.</strong></p>
                     <p>Chez <span>Xtra Copy Tournai</span>, nous sommes conscients de l'importance de la qualité et de
                         la précision
                         dans la
@@ -45,7 +45,7 @@
             <h3>Reliures</h3>
             <div class="flexSlide">
                 <div class="texte">
-                    <p><span>Xtra Copy Tournai</span> offre des services de reliure professionnelle pour tous vos
+                    <p><span>Xtra Copy Tournai</span> offre des services de <strong>reliures professionnelles</strong> pour tous vos
                         documents. Nous proposons
                         différents types de reliure, tels que la reliure à anneaux plastique ou métallique ainsi que des reliure à dos carré collé.</p>
                     <p>Chez <span>Xtra Copy Tournai</span>, nous comprenons l'importance de la qualité et de la
@@ -70,23 +70,23 @@
             <h3>Plastification</h3>
             <div class="flexSlide">
                 <div class="texte">
-                    <p><span>Xtra Copy Tournai</span> propose des services professionnels d'étiquetage et de plastification pour
+                    <p><span>Xtra Copy Tournai</span> propose des services professionnels <strong>de plastification</strong> pour
                         répondre à
                         tous vos besoins en matière de protection de documents.</p>
-                    <p>Nous offrons un service de plastification pour protéger vos documents importants
+                    <p>Nous offrons <strong>un service de plastification</strong> pour protéger vos documents importants
                         contre
                         l'humidité, les taches et les déchirures. Nous pouvons plastifier des documents jusqu'au format A3.</p>
-                    <p>Chez Xtra Copy Tournai, nous utilisons des matériaux de haute qualité pour garantir une
+                    <p>Chez <span>Xtra Copy Tournai</span>, nous utilisons des matériaux de haute qualité pour garantir une
                         protection
                         maximale de vos documents. Nous sommes là pour vous aider à conserver vos documents importants
                         en
                         parfait état.</p>
-                    <p>En résumé, si vous cherchez un service professionnel de plastification à Tournai,
+                    <p><strong>En résumé, si vous cherchez <strong>un service professionnel de plastification à Tournai</strong>,
                         ne
-                        cherchez pas plus loin que Xtra Copy Tournai. Nous sommes là pour répondre à tous vos besoins en
+                        cherchez pas plus loin que <span>Xtra Copy Tournai</span>. Nous sommes là pour répondre à tous vos besoins en
                         matière
                         de protection de documents, en utilisant des matériaux de haute qualité pour
-                        garantir une protection maximale de vos documents importants.</p>
+                        garantir une protection maximale de vos documents importants.</strong></p>
                 </div>
                 <img src="{{ asset('images/servicePlastification.jpg') }}" alt="">
             </div>
@@ -95,29 +95,29 @@
             <h3>Point relais</h3>
             <div class="flexSlide">
                 <div class="texte">
-                    <p>Xtra Copy Tournai est un point relais de colis proposant des services de livraison avec Mondial
+                    <p><span>Xtra Copy Tournai</span> est un point relais de colis proposant des services de livraison avec <strong>Mondial
                         Relay,
-                        UPS, Post NL, GLS et Homerr. Nous sommes fiers de proposer une solution pratique et efficace
+                        UPS, Post NL, GLS et Homerr</strong>. Nous sommes fiers de proposer une solution pratique et efficace
                         pour les
-                        clients qui souhaitent envoyer ou recevoir des colis.</p>
+                        clients qui souhaitent <strong>envoyer ou recevoir des colis.</strong></p>
                     <p>Notre personnel est formé pour offrir un service convivial et professionnel, et nous sommes là
                         pour vous
-                        aider à expédier ou à récupérer votre colis en toute simplicité. Nous offrons une grande
+                        aider à <strong>expédier ou à récupérer votre colis</strong> en toute simplicité. Nous offrons une grande
                         flexibilité en
                         termes d'horaires d'ouverture, pour que vous puissiez récupérer votre colis à
                         un
                         moment qui vous conviennent.</p>
-                    <p>Chez Xtra Copy Tournai, nous sommes fiers de travailler avec des entreprises de livraison de
+                    <p>Chez <span>Xtra Copy Tournai</span>, nous sommes fiers de travailler avec des entreprises de livraison de
                         renommée
                         internationale pour vous offrir une livraison rapide et fiable. Nous sommes là pour vous aider à
-                        expédier vos colis en toute sécurité et avec un minimum de tracas.</p>
-                    <p>En résumé, si vous cherchez un point relais de colis avec une large gamme de services de
+                        <strong>expédier vos colis en toute sécurité</strong> et avec un minimum de tracas.</p>
+                    <p><strong>En résumé, si vous cherchez un point relais de colis avec une large gamme de services de
                         livraison à
-                        Tournai, ne cherchez pas plus loin que Xtra Copy Tournai. Nous sommes là pour vous aider à
+                        Tournai, ne cherchez pas plus loin que <span>Xtra Copy Tournai</span>. Nous sommes là pour vous aider à
                         expédier ou à
                         récupérer votre colis en toute simplicité, avec une grande flexibilité et en travaillant avec
                         les
-                        entreprises de livraison les plus fiables et réputées.</p>
+                        entreprises de livraison les plus fiables et réputées.</strong></p>
                 </div>
                 <img src="{{ asset('images/serviceColis.jpg') }}" alt="">
             </div>
