--- a/templates/site_web_xtra_copy/partials/_header.html.twig
+++ b/templates/site_web_xtra_copy/partials/_header.html.twig
@@ -37,5 +37,18 @@
                 <li><a href="#mapSection">Nous trouver</a></li>
             </ul>
         </div>
+        <div class="MenuNavResponsive">
+            <ul>
+                <li><a href="#aboutSection">Qui sommes-nous</a></li>
+                <li><a href="#serviceSection">Nos différents services</a></li>
+                <li><a href="#mapSection">Nous trouver</a></li>
+            </ul>
+        </div>
+        <div class="menuBurger">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+        
+        </div>
 
     </div>
