--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -167,6 +167,10 @@ html {
     background-color: #1e6243;
     width: 100%;
 
+    @media only screen and (max-width: 1000px) {
+        display: none;
+    }
+
     ul {
         padding: 0;
         margin: 0;
@@ -209,11 +213,61 @@ html {
     box-shadow: 0px 4px 24px rgba(0, 0, 0, .25);
     position: sticky;
     top: 0;
+   
+   
+
+    .menuBurger{
+        position: absolute;
+        right: 25px;
+        height: 50px;
+        top: 14px;
+        cursor: pointer;
+        z-index:  999 !important;
+        display: none;
+        @media only screen and (max-width: 1000px) {
+            display: block;
+
+        }
+        .bar1, .bar2, .bar3 {
+            background-color: #ff8a00;
+            margin-top: 8px;
+            height: 2px;
+            width: 35px;
+            border-radius: 1px;
+            transition: all .7s;
+        }
+        .bar2{
+            background-color: #1E6243;
+            width: 29px;
+        }
+
+    }
+    .open{
+        .bar1{
+            transform: translateY(10px) rotate(-45deg);
+        }
+        .bar2{
+            opacity: 0;
+        }
+        .bar3{
+            transform: translateY(-10px) rotate(45deg);
+        }
+    }
+
 
     .logo {
         padding-top: 10px;
         width: 20%;
         text-align: center;
+        z-index:  999 !important;
+
+        @media only screen and (max-width: 1000px) {
+            width: 100%;
+            
+
+        }
+
+       
 
         a {
             text-decoration: none;
@@ -231,9 +285,15 @@ html {
     .MenuNav {
         width: 80%;
 
+        @media only screen and (max-width: 1000px) {
+            display: none;
+        }
+
         ul {
             display: flex;
             justify-content: space-evenly;
+
+
 
             li {
                 line-height: 64px;
@@ -252,6 +312,46 @@ html {
 
         }
     }
+   
+    .MenuNavResponsive {
+        width: 100%;
+        position: absolute;
+        min-height: 150vh;
+        background-color: white;
+        text-align: center;
+        padding-top: 100px;
+        padding-bottom: 50px;
+        top: 180vh;
+        transition: all .7s;
+       
+        ul {
+           
+            li {
+                padding-top: 60px;
+                padding-bottom: 60px;
+                border-bottom: 1px solid #ff8a00;
+                width: 68%;
+                margin: auto;
+               
+
+                a {
+                    font-size: 25px;
+                    text-decoration: none;
+                    color: #1E6243;
+                    font-weight: bold;
+                    &:hover {
+                        color: #ff8a00;
+                    }
+                }
+            }
+
+
+        }
+    }
+    .openSlide{
+     top:0;
+       
+    }
 }
 
 
@@ -264,10 +364,18 @@ html {
     .slide {
         position: absolute;
         bottom: 0;
-        left: 30%;
+        width: 100%;
+        text-align: center;
+
+
+
         img {
-            width: 100%;
+            width: 75%;
             height: auto;
+
+            @media only screen and (max-width: 1000px) {
+                display: none;
+            }
         }
     }
 
@@ -296,6 +404,9 @@ html {
         padding-top: 110px;
         text-align: center;
         margin-left: 5%;
+        @media only screen and (max-width: 600px) {
+            width: 90%;
+        }
 
 
         h1 {
@@ -374,7 +485,7 @@ html {
                 display: flex;
                 gap: 30px;
                 padding-top: 120px;
-                width: 50%;
+                width: 100%;
 
                 img {
                     width: 41px;
@@ -392,6 +503,11 @@ html {
 
             .description {
                 width: 35%;
+                padding-bottom: 40px;
+
+                @media only screen and (max-width: 1400px) {
+                    width: 80%;
+                }
 
                 .texte {
                     p {
@@ -418,6 +534,10 @@ html {
                 top: 250px;
                 left: 45%;
 
+                @media only screen and (max-width: 1400px) {
+                    display: none;
+                }
+
 
                 img {
                     border-radius: 15px;
@@ -437,49 +557,55 @@ html {
     background-color: #ffffff;
     position: relative;
 
-    .tarif{
+    .tarif {
         width: 100%;
         height: 200px;
         position: relative;
-      .buttonTarif{
-        height: 40px;
-        width: 250px;
-        position: absolute;
-        top: 70px;
-        right: 5%;
-        border-radius: 50px;
-        background: linear-gradient(90deg, #B7D14E 0%, #1E6243 100%);
-        &:hover{
-            a{    
-                color: black;
-              i{
-                color: black;
-                
-            }  
-            }
-        }
-        a{
-            text-decoration: none;
-            color: white;
-            font-size: 22px;
-            line-height: 36px;
-            padding-left: 80px;
-          i{
-            font-size: 40px;
-            position: absolute;
-            left:  15px;
-            color: white;
-        }  
-        }
-        
-    }  
-    }
-    
 
-    .none{
+        .buttonTarif {
+            height: 40px;
+            width: 250px;
+            position: absolute;
+            top: 70px;
+            right: 5%;
+            border-radius: 50px;
+            background: linear-gradient(90deg, #B7D14E 0%, #1E6243 100%);
+
+            &:hover {
+                a {
+                    color: black;
+
+                    i {
+                        color: black;
+
+                    }
+                }
+            }
+
+            a {
+                text-decoration: none;
+                color: white;
+                font-size: 22px;
+                line-height: 36px;
+                padding-left: 80px;
+
+                i {
+                    font-size: 40px;
+                    position: absolute;
+                    left: 15px;
+                    color: white;
+                }
+            }
+
+        }
+    }
+
+
+    .none {
         display: none;
     }
-    .service{
+
+    .service {
         opacity: 0;
         transition: opacity 0.5s ease-in-out;
     }
@@ -488,7 +614,7 @@ html {
         display: flex;
         gap: 30px;
         padding-top: 120px;
-        width: 50%;
+        width: 90%;
         margin-left: 5%;
         padding-bottom: 20px;
 
@@ -505,40 +631,55 @@ html {
             font-weight: 100;
         }
     }
-    .slide
-    {
+
+    .slide {
         padding-top: 20px;
         width: 90%;
         margin: auto;
-        h3{
+
+        h3 {
             color: #ff8a00;
             font-size: 24px;
             font-family: 'mark';
             padding-bottom: 40px;
             text-align: center;
         }
-        .flexSlide
-        {
+
+        .flexSlide {
             display: flex;
-            gap:10%;
-            .texte{
-                p{
+            gap: 3%;
+            flex-wrap: wrap;
+
+            .texte {
+                width: 55%;
+
+                @media only screen and (max-width: 1400px) {
+                    width: 99%;
+                }
+
+                p {
                     padding-top: 20px;
                     font-size: 22px;
                     color: #1E6243;
 
-                    span{
+                    span {
                         color: #ff8a00;
                         font-weight: bold;
                     }
-                    strong{
+
+                    strong {
                         font-weight: 600;
                     }
                 }
             }
-            img{
-                width: 35%;
+
+            img {
+                width: 42%;
                 border-radius: 15px;
+
+                @media only screen and (max-width: 1400px) {
+                    display: none;
+                }
 
             }
         }
@@ -550,17 +691,19 @@ html {
 
 //map
 
-.map{
+.map {
     width: 100%;
     min-height: 100vh;
     position: relative;
     overflow: hidden;
-    iframe{
+
+    iframe {
         margin-top: 180px;
         border-top: 2px solid #ff8a00;
         border-bottom: 2px solid #ff8a00;
     }
-    .titre{
+
+    .titre {
         position: absolute;
         background-color: #1E6243;
         width: 650px;
@@ -572,41 +715,54 @@ html {
         transform: skew(-25deg);
         padding-left: 5%;
         gap: 30px;
-        img{
+        
+        @media only screen and (max-width: 1000px) {
+            width: 100%;
+        }
+
+        img {
             width: 41px;
             height: 41px;
             margin-top: 10px;
             transform: skew(25deg);
             padding-left: 100px;
         }
-        h2{
+
+        h2 {
             transform: skew(25deg);
             color: white;
-            font-size:  35px;
+            font-size: 35px;
             font-family: 'mark';
         }
     }
-    .info{
-        ul{
+
+    .info {
+        ul {
             display: flex;
             justify-content: space-evenly;
             margin-bottom: 50px;
             flex-wrap: wrap;
-            li{
-                .figure{
-                    height:  120px;
+            gap: 30px;
+
+            li {
+                width: 250px;
+
+                .figure {
+                    height: 120px;
                     position: relative;
                     width: 81px;
                     margin: auto;
-                    .carre{
-                        width:  81px;
+
+                    .carre {
+                        width: 81px;
                         height: 60px;
                         background-color: #ff8a00;
                         margin: auto;
                         position: absolute;
                         margin-top: -2px;
                     }
-                    .rond{
+
+                    .rond {
                         width: 81px;
                         height: 81px;
                         background-color: #ff8a00;
@@ -615,26 +771,31 @@ html {
                         position: absolute;
                         top: 15px;
                         text-align: center;
-                        i{
+
+                        i {
                             color: #ffffff;
                             opacity: 0.5;
                             font-size: 42px;
-                            padding-top: 21px;            
+                            padding-top: 21px;
                         }
                     }
                 }
-                .texte{
+
+                .texte {
                     text-align: center;
-                    h3{
+
+                    h3 {
                         font-size: 20px;
                         color: #ff8a00;
                         font-weight: bold;
                         margin-bottom: 10px;
                     }
-                    p{
+
+                    p {
                         font-size: 20px;
                         line-height: 25px;
-                        strong{
+
+                        strong {
                             font-weight: bold;
                         }
                     }
@@ -648,13 +809,14 @@ html {
 
 //footer
 
-footer{
-    background-color:#1E6243;
+footer {
+    background-color: #1E6243;
     width: 100%;
     height: 56px;
     text-align: center;
     line-height: 56px;
-    p{
+
+    p {
         color: #ffffff;
     }
 }
