--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -16,13 +16,11 @@
                 <form action="#" method="post">
                     <div class="form-group">
                         <label for="username" class="form-label mt3 text-center">Adresse email</label>
-                        <input type="email" class="form-control" id="username" name="_username"
-                            placeholder="exemple@benscar.be" value="{{last_username}}">
+                        <input type="email" class="form-control" id="username" name="_username" value="{{last_username}}">
                     </div>
                     <div class="form-group mt-3">
                         <label for="password" class="form-label mt3">Mot de passe</label>
-                        <input type="password" class="form-control bg-danger" id="password" name="_password"
-                            placeholder="********">
+                        <input type="password" class="form-control bg-danger" id="password" name="_password">
                     </div>
                     <div class="button">
                     <button type="submit" class="btn btn-primary mt-2">Se connecter</button>
