--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -13,10 +13,9 @@
             </div>
             <p>Avant toute chose, n'oubliez pas de lancer <span>Wamp Server</span> sur votre bureau ainsi que le <span>programme imprimantes</span> en magasin.</p> 
             <div class="link">
-            <a href="">Nouveau Client</a>
+            <a href="{{ path('clientNew') }}">Nouveau Client</a>
             </div>
         </div>
     </div>
 </div>
-
 {% endblock %}
