--- a/templates/dashboard/indexAdmin.html.twig
+++ b/templates/dashboard/indexAdmin.html.twig
@@ -11,7 +11,7 @@
                     <li><a href="">Gestion du site internet</a></li>
                     <li><a href="">Gestion des employes</a></li>
                     <li><a href="">Comptabilité</a></li>
-                    <li><a href="">Gestion du parc d'imprimante</a></li>
+                    <li><a href="{{ path('printindex') }}">Gestion du parc d'imprimante</a></li>
                     <li><a href="">Gestion des produits</a></li>
                 </ul>
             </div>
