--- a/templates/dashboard/indexAdmin.html.twig
+++ b/templates/dashboard/indexAdmin.html.twig
@@ -13,6 +13,7 @@
                     <li><a href="">Comptabilité</a></li>
                     <li><a href="{{ path('printindex') }}">Gestion du parc d'imprimante</a></li>
                     <li><a href="">Gestion des produits</a></li>
+                    <li><a href="{{ path('prixcopieindex') }}">Prix des photocopies</a></li>
                 </ul>
             </div>
         </div>
