--- a/templates/dashboard/printIndex.html.twig
+++ b/templates/dashboard/printIndex.html.twig
@@ -26,8 +26,8 @@
                         <td>{{imprimante.numero}}</td>
                         <td>{{imprimante.name}}</td>
                         <td>{{imprimante.ip}}</td>
-                        <td class="link"><a href="" class="btn btn-warning mx-2">Modifier</a>
-                            <a href="" class="btn btn-danger mx-2">Supprimer</a>
+                        <td class="link"><a href="{{path('printedit',{'id': imprimante.id})}}" class="btn btn-warning mx-2">Modifier</a>
+                            <a href="{{path('printdelete',{'id': imprimante.id})}}" class="btn btn-danger mx-2">Supprimer</a>
                         </td>
                     </tr>
                 </tbody>
