--- a/templates/dashboard/photocopies/index.html.twig
+++ b/templates/dashboard/photocopies/index.html.twig
@@ -10,33 +10,61 @@
             <div class="row">
             <div class="col-lg-6">
             <h2>Copies couleurs</h2>
+            <a href="{{ path('priceColorNew') }}" class="ajout">Ajouter prix couleur</a>
             <table>
                 <thead>
                     <tr>
                         <th>Début</th>
                         <th>Fin</th>
                         <th>Prix</th>
+                        <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody>
+                {% for color in colors %}
+                <tr>
+                <td>{{color.Begin}}</td>
+                <td>{{color.End}}</td>
+                <td>{{ color.Price | round(2) }} €</td>
+                <td class="link"><a href="{{path('priceColorEdit',{'id': color.id})}}" class="btn btn-warning mx-2">Modifier</a>
+                             <a href="{{path('priceColorDelete',{'id': color.id})}}" class="btn btn-danger mx-2">Supprimer</a>
+                        </td>
+
+                
+                
+                
+                </tr>
+                    
+                {% endfor %}
                 </tbody>
             </table>
             </div>
             <div class="col-lg-6">
             <h2>Copies Noirs et blanc</h2>
+            <a href="{{ path('priceNbNew') }}" class="ajout">Ajouter prix noir et blanc</a>
             <table>
                 <thead>
                     <tr>
                         <th>Début</th>
                         <th>Fin</th>
                         <th>Prix</th>
+                        <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody>
+                {% for nb in nbs %}
+                <tr>
+                <td>{{nb.Begin}}</td>
+                <td>{{nb.End}}</td>
+                <td>{{ nb.Price | round(2) }} €</td>
+                <td class="link"><a href="{{path('priceNbEdit',{'id': nb.id})}}" class="btn btn-warning mx-2">Modifier</a>
+                            <a href="{{path('priceNbDelete',{'id': nb.id})}}" class="btn btn-danger mx-2">Supprimer</a>
+                        </td>
+                 </tr>
+                    
+                {% endfor %}
                 </tbody>
-            </table>
-            
-            
+            </table> 
             </div>
             
             
